--- a/app.json
+++ b/app.json
@@ -10,4 +10,18 @@
     "website": "https://github.com/anmoldh/SearchInDriveBot",
     "success_url": "https://t.me/WeNubMirrors",
     "stack": "container"
+    "env": {
+
+      "BUTTON_FIVE_URL": {
+        "description": "Fill your URL if you are using extra buttons.",
+        "required": false
+      },
+      "BUTTON_SIX_NAME": {
+        "description": "Extra buttons (optional).",
+        "required": false
+      },
+      "BUTTON_SIX_URL": {
+        "description": "Fill your URL if you are using extra buttons.",
+        "required": false
+      }
 }
