--- a/app.json
+++ b/app.json
@@ -11,6 +11,10 @@
     "success_url": "https://t.me/WeNubMirrors",
     "stack": "container"
     "env": {
+      "ENV": {
+        "description": "Setting this to ANYTHING will enable Webhooks when in env mode",
+        "value": "ANYTHING"
+      },
       "BOT_TOKEN": {
         "description": "Get it from @Botfather",
         "required": true
