--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "repository": "https://github.com/anmoldh/SearchInDriveBot",
     "website": "https://github.com/anmoldh/SearchInDriveBot",
     "success_url": "https://t.me/WeNubMirrors",
-    "stack": "container"
+    "stack": "container",
     "env": {
       "BOT_TOKEN": {
         "description": "Get it from @Botfather",
